--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,5 @@ build/
 
 ./src/main/resources/*.properties
 # Exclude sensitive information in properties files
-!src/main/resources/application.properties
-!src/main/resources/application-dev.properties
-!src/main/resources/application-prod.properties
-!src/main/resources/application-test.properties
+
+src/main/resources/application.properties
