--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ build/
 # Exclude sensitive information in properties files
 
 src/main/resources/application.properties
+src/main/resources/application.properties
